Added pathfinding to units